--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,57 @@
-# =========================
-# Build output
-# =========================
-Debug/
-Release/
-build/
-cmake-build-*/
-
-# =========================
-# STM32CubeIDE / Eclipse
-# =========================
-.settings/
-.project
-.cproject
-*.launch
-
-# =========================
-# STM32 HAL / CubeMX
-# =========================
-.mxproject
-
-# =========================
-# Toolchain / Debug
-# =========================
-*.elf
-*.map
-*.hex
-*.bin
-*.lst
-*.o
+# Prerequisites
 *.d
 
-# =========================
-# OS / Editor junk
-# =========================
-.DS_Store
-Thumbs.db
-*.swp
-*.bak
-*.tmp
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
 
-# =========================
-# Python / scripts (optional)
-# =========================
-__pycache__/
-*.pyc
+# Linker output
+*.ilk
+*.map
+*.exp
 
-# =========================
-# Logs
-# =========================
-*.log
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# debug information files
+*.dwo
+Debug/
+
